# email_traiga_openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  env.py  generate_emails.py  graders.py  inference.py  ml_train.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_results.txt  test_suite.py
backend/: main.py  models.py
backend/ai/: __init__.py  hf_agent.py
backend/api/: routes.py
backend/data/: emails.json  emails_1000.json
backend/env/: __init__.py  email_triage_env.py
backend/graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
backend/ml/: email_classifier.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Badge.jsx  EmailCard.jsx  LoadingSpinner.jsx  ScoreBar.jsx  Sidebar.jsx
frontend/src/pages/: AgentSimulation.jsx  EmailDetail.jsx  EmailQueue.jsx  EvaluationDashboard.jsx  LiveTriage.jsx
ml_results/: ml_results_summary.txt
models/: email_ml_model.joblib
server/: Dockerfile  __init__.py  app.py  graders.py
